# cpp-assignment-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: hidden-grader.yml  public-ci.yml
solution/: CMakeLists.txt  placeholder.cpp  placeholder.hpp  vector.hpp
tests/public/: CMakeLists.txt  test_smoke.cpp
tools/: check_format.sh  configure.sh  run_public_tests.sh  run_tidy.sh
